fixed projects error on mobile

--- a/src/stylesheets/global.css
+++ b/src/stylesheets/global.css
@@ -1,7 +1,4 @@
 @media only screen and (max-width: 426px) {
-	body {
-		background-color: red;
-	}
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
